GNU parted NEWS                                    -*- outline -*-

* Noteworthy changes in release 3.1-29 (2017-04-11) [RHEL7.4]

  Parted now recognizes NVMe devices

* Noteworthy changes in release 3.1-18 (2014-08-12) [RHEL7.1]

** New features

  Add support for prep flag to GPT to select PowerPC Reference Platform
  boot partition type.

* Noteworthy changes in release 3.1-16 (2014-01-22) [RHEL7]

** Bug Fixes

  libparted: handle logical partitions starting immediately after
  the EBR.  Creating a logical partition one sector after the EBR
  used to cause parted to complain that it could not inform the
  kernel of the changes, but after a reboot, everything was fine.
  Parted will now correctly inform the kernel of the changes, but
  only set the length of the extended partition to 1 sector instead
  of two, which would cause it to overlap the logical partition.

  If a drive was 100 times an even multiple of two, sizes specified as
  a percentage would trigger the exact placement rule and refuse to round
  to the nearest half percent.

* Noteworthy changes in release 3.1-4 (2012-06-08) [Fedora]

** Bug Fixes

  libparted: Don't crash on big-endian systems when using GPT
  libparted: Treat disks without a PMBR as msdos labeled disks
  even if they have GPT partition tables.


* Noteworthy changes in release 3.1 (2012-03-02) [stable]

** New features

  parted now supports up to 64 msdos partitions (was 16).  The partition
  table format imposes no limit (it's simply a linked list), so we may
  raise it further, if needed.

  parted has improved support for partitionable loopback devices

  parted provides a new library, libparted-fs-resize, for resizing
  HFS+ and FAT file systems.  This is the subset of the FS-manipulation
  functionality removed in parted-3.0 for which we have found no free
  alternative.  That library provides only these entry points:
    ped_file_system_close
    ped_file_system_get_resize_constraint
    ped_file_system_open